# memo

./: .gitignore  Cargo.toml  DISCOVERY.md  LICENSE  Makefile.toml  README.md  docker-compose.yml  sqlx-data.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  memo.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: app.rs  main.rs
frontend/src/app/: fetch.rs  viewer.rs  writer.rs
k8s/: ingress.yml
k8s/backend/: deployment.yml  service.yml
k8s/frontend/: deployment.yml  service.yml
k8s/postgres/: configmap.yml  deployment.yml  service.yml  storage.yml
migrations/: 20220611200214_memo.sql
src/: main.rs  memo.rs
