[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
reqwasm = "0.5"
serde_json = "1"
uuid = "0.8"
yew = "0.19"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
